# rakeman-engine

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/raker/: CMakeLists.txt  main.cpp
res/dict/: terms
src/: CMakeLists.txt  main.cpp
src/apps/raker/: CMakeLists.txt  main.cpp
src/common/: config.h  deport.h  factory.h  integer2string.h  log.cpp  log.h  redisdeport.cpp  redisdeport.h  serializer.h  string2wstring.cpp  string2wstring.h
src/common/data/: doc.h  token.h
src/common/deport/: deport.h  redisdeport.cpp  redisdeport.h
src/common/factory/: deportfactory.h  factory.h  factoryfactory.cpp  factoryfactory.h  tokenizerfactory.h
src/common/taskwoker/: breakdocblocktask.cpp  breakdocblocktask.h  queryexpresstask.cpp  queryexpresstask.h  response.cpp  response.h  sortandmergetempintodicttask.cpp  sortandmergetempintodicttask.h  sortunsortedpostinglisttask.cpp  sortunsortedpostinglisttask.h  task.cpp  task.h  woker.cpp  worker.h
src/core/: doc2term.cpp  doc2term.h  doctokenizer.h  doctokenizerimpl.cpp  doctokenizerimpl.h  normalizer.h  normalizerimpl.cpp  normalizerimpl.h  term2posting.cpp  term2posting.h  termprocess.cpp  termprocess.h  tokenizer.h  tokenizerimpl.cpp  tokenizerimpl.h  wilermatcher.cpp  wilermatcher.h
src/data/: doc.h  map.h  postingsmap.h  redistaskqueue.cpp  redistaskqueue.h  taskqueue.h  term.h  wrappedstlmap.hpp
src/raker/: docindexer.cpp  docindexer.h
src/saker/: postingsop.cpp  postingsop.h  postingsop.hpp
src/saker/queryexpresser/: binarystatement.h  bsconjunction.cpp  bsconjunction.h  bsexclude.cpp  bsexclude.h  bsfetchpostings.h  bsintersect.cpp  bsintersect.h  queryexpresser.cpp  queryexpresser.h  sfetchpostings.cpp  statement.h
test/: CMakeLists.txt  core_test.cpp  cppredis_test.cpp  deport_test.cpp  doc2term_test.cpp  ever.cpp  log_test.cpp  postingsop_test.cpp  queryexpresser_test.cpp  serialize_test.cpp  task_test.cpp
test/core/: core_test.cpp
test/data/: datastruct_test.cpp
